# dora-sim-genesis-franka-grasp-cube

./: .gitignore  README.md  pyproject.toml  test_improvements.py
config/: simulation_config.yaml
examples/: view.yml
src/: keyboard_controller.py  main.py  main_bc.py
